fixed draw offscreen

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,68 @@
-.App {
-	text-align: center;
-	max-width: 1200px;
-	margin: 0 auto;
-	height: 80vh;
-	overflow-y: hidden;
+/* Large screens */
+@media screen and (min-width: 993px) {
+	.App {
+		text-align: center;
+		max-width: 1200px;
+		margin: 0 auto;
+		padding: 0 2rem;
+		height: 80vh;
+		/* overflow-y: hidden; */
+	}
+
+	.App-Container {
+		display: grid;
+		grid-template-columns: 50% 50%;
+		grid-template-rows: 30px auto;
+		grid-template-areas: "header header" "setting drawing" "message drawing";
+	}
+}
+/* Smaller screens */
+
+@media screen and (max-width: 992px) {
+	.App {
+		text-align: center;
+		max-width: 1200px;
+		margin: 0 auto;
+		height: 80vh;
+	}
+
+	.App-Container {
+		display: grid;
+		grid-template-columns: 100%;
+		grid-template-rows: auto;
+		grid-template-areas: "setting" "drawing" "message";
+	}
 }
 
+.App-Setting {
+	grid-area: setting;
+}
 
+.App-Drawing {
+	grid-area: drawing;
+	border: 1px solid #ffffff;
+}
+
+.App-Message {
+	grid-area: message;
+	overflow-x: hidden;
+	border: 1px solid #ffffff;
+}
 
 .App-logo {
 	height: 40vmin;
 }
 
-.App-header {
-	background-color: transparent;
-	min-height: 100vh;
+.App-Header {
+	background-color: #bfef45;
+	/* min-height: 100vh; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	/* justify-content: center; */
 	font-size: calc(10px + 2vmin);
 	color: white;
+	grid-area: header;
 }
 
 .App-link {
