--- a/src/components/messages/message.css
+++ b/src/components/messages/message.css
@@ -13,8 +13,9 @@
 
 .message-container {
 	width: 100%;
-	max-height: 20em;
+	height: 15em;
 	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .message-container .container .header {
